<resources>
    <string name="app_name">Transport Adviser</string>

    <string name="community_project_logo">Community Project Logo</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email_registration">Email Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="available_boarding_locations">Boarding Locations(Select to Show Routes)</string>
    <string name="error_loading_data_from_firebase">Error Loading data from Firebase</string>
    <string name="routes">Routes(Select to make Payment)</string>
    <string name="fare">Fare</string>
    <string name="next">Next</string>
    <string name="vendors">Vendors:</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="choose_photo_from_memory">Choose photo from memory</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="dbnode_transport_users">transportUsers</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="dialog_change_photo">ChangePhotoDialog</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_user_id">user_id</string>
    <string name="fare_charge">Fare Charge:</string>
    <string name="card_number">Card Number:</string>
    <string name="expiry_month">Expiry Month:</string>
    <string name="expiry_year">Expiry Year:</string>
    <string name="cvc">CVC:</string>
    <string name="make_payment">Make Payment</string>


</resources>