<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signedInConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1D4DB"
    tools:context=".SignedInActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="290dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/spinner_background"
        android:gravity="center"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="368dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/available_boarding_locations"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/vendors"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/location_holder_fragment"
        android:name="com.zikozee.communityproject.boardingLocation.LocationFragment"
        android:layout_width="381dp"
        android:layout_height="246dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/route_holder_fragment"
        android:name="com.zikozee.communityproject.route.RouteFragment"
        android:layout_width="381dp"
        android:layout_height="246dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="369dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/routes"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_holder_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>